# dns_system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
src/config/: config.json
src/dns_system/: app.py  main.py
src/dns_system/apps/commons/: constants.py  tasks.py
src/dns_system/apps/db/: abstract.py  base.py  base_model.py  session.py
src/dns_system/apps/db/models/: domain_models.py
src/dns_system/apps/domains/: constants.py  middleware.py  schemas.py  selectors.py  services.py
src/dns_system/apps/domains/views/: api.py
src/dns_system/apps/typer/: base.py  decorators.py  mappers.py  services.py  tasks.py
src/dns_system/apps/typer/views/: api.py
src/dns_system/config/: log_config.py  settings.py
src/dns_system/migrations/: env.py
src/dns_system/migrations/versions/: c146ef11fc29_initial_migrations.py
src/dns_system/routers/: api.py
src/dns_system/utils/: exceptions.py
tests/: conftest.py
tests/domains/: test_domains_api.py  test_domains_selectors.py
tests/typer/: test_manager.py  test_services.py
