[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"


[project]
name = "dns-system"
description = "Веб-сервис для работы с DNS"
readme = "README.md"
authors = [{name="ikyol", email="krakem.nc@gmail.com"}]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "fastapi~=0.103.2",
    "flake8~=6.1.0",
    "alembic~=1.12.0",
    "python-dotenv~=0.21.0",
    "uvicorn[standard]~=0.23.2",
    "SQLAlchemy~=2.0.2",
    "greenlet~=2.0.2",
    "psycopg2-binary~=2.9.5",
    "asyncpg~=0.29.0",
    "typer==0.9.0",
    "sentry-sdk~=1.32.0",
    "prometheus-client~=0.15.0",
    "environs~=9.5.0",
    "psutil~=5.9.4",
    "pydantic-settings~=2.0.3",
    "loguru~=0.6.0",
    "pendulum~=2.1.2",
    "cryptography~=41.0.4",
    "aiohttp~=3.8.4",
    "APScheduler~=3.10.4",
    "pytest~=7.4.3",
    "httpx~=0.25.0",
    "pytest-asyncio~=0.21.1"
]
requires-python = ">=3.10"

[project.scripts]
dns-system = "dns_system.main:execute"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dns_system" = ["alembic.ini"]
"dns_system.migrations" = ["*"]
"config" = ["*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]
asyncio_mode = "auto"
